# valkey-chat

./: .gitignore  .sample.env  Cargo.toml  Dockerfile  README.md  chat-export.parquet  docker-compose.yml  entrypoint.sh
src/: config.rs  controllers.rs  main.rs  routes.rs  services.rs  storage.rs  workers.rs
src/config/: s3.rs  valkey.rs
src/controllers/: export.rs  export_controller.rs  history.rs  history_controller.rs  messages.rs  messages_controller.rs  types.rs
src/models/: chat_message.rs
src/services/: export.rs  export_messages.rs  export_service.rs  history.rs  history_service.rs  message.rs  message_service.rs  read_history.rs  save_message.rs  trigger_service.rs
src/storage/: export_to_parquet.rs  fetch_messages.rs  messages.rs  parquet.rs  read_parquet_history.rs  save_message.rs  types.rs
src/workers/: pubsub_worker.rs
