[package]
name = "valkey-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow2 = { version = "0.18.0", features = ["io_parquet"] }
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
parquet = "56.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
actix-cors = "0.7.1"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
arrow = "56.1.0"
parquet2 = "0.17.2"
dotenv = "0.15.0"
